Refactor codex/easy tests to remove test smells