@@ -1,23 +1,27 @@
 package codex.easy;
 
 import java.util.*;
-import java.lang.*;
-import org.junit.jupiter.api.Test;
+import java.util.stream.Stream;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import static org.junit.jupiter.api.Assertions.*;
 
 public class HumanEval8Test {
-    @Test
-    public void testSolution() {
+    @ParameterizedTest
+    @MethodSource("sumProductCases")
+    public void testSumProduct(List<Integer> input, List<Integer> expected) {
         HumanEval8 s = new HumanEval8();
-        List<Boolean> correct = Arrays.asList(
-                s.sumProduct(new ArrayList<>(List.of())).equals(Arrays.asList(0, 1)),
-                s.sumProduct(new ArrayList<>(Arrays.asList(1, 1, 1))).equals(Arrays.asList(3, 1)),
-                s.sumProduct(new ArrayList<>(Arrays.asList(100, 0))).equals(Arrays.asList(100, 0)),
-                s.sumProduct(new ArrayList<>(Arrays.asList(3, 5, 7))).equals(Arrays.asList(3 + 5 + 7, 3 * 5 * 7)),
-                s.sumProduct(new ArrayList<>(List.of(10))).equals(Arrays.asList(10, 10))
+        assertEquals(expected, s.sumProduct(new ArrayList<>(input)));
+    }
+
+    private static Stream<Arguments> sumProductCases() {
+        return Stream.of(
+                Arguments.of(List.of(), List.of(0, 1)),
+                Arguments.of(List.of(1, 1, 1), List.of(3, 1)),
+                Arguments.of(List.of(100, 0), List.of(100, 0)),
+                Arguments.of(List.of(3, 5, 7), List.of(15, 105)),
+                Arguments.of(List.of(10), List.of(10, 10))
         );
-        if (correct.contains(false)) {
-            throw new AssertionError();
-        }
     }
 }
